diyHue sketch added

--- a/Firmware/Hugh_diyHueTapSwitch/webconfig.html
+++ b/Firmware/Hugh_diyHueTapSwitch/webconfig.html
@@ -148,23 +148,11 @@
                 <label for="sn">Subnet mask (optional):</label>
                 <input type="text" id="sn" name="sn" value="@">
             </div>
-            <h2>Buttons settings</h2>
-            <p>Assign target URL for each button.<br>For example: "http://example.com/button1"</p>
+            <h2>diyHue settings</h2>
+            <p>For the remote to work, specify your diyHue bridge IP address.<br>For example: "192.168.0.100"</p>
             <div class="row">
-                <label for="b1">Button 1 url</label>
-                <input type="text" id="b1" name="b1" value="@">
-            </div>
-            <div class="row">
-                <label for="b2">Button 2 url</label>
-                <input type="text" id="b2" name="b2" value="@">
-            </div>
-            <div class="row">
-                <label for="b3">Button 3 url</label>
-                <input type="text" id="b3" name="b3" value="@">
-            </div>
-            <div class="row">
-                <label for="b4">Button 4 url</label>
-                <input type="text" id="b4" name="b4" value="@">
+                <label for="bridge">Bridge IP</label>
+                <input type="text" id="bridge" name="bridge" value="@">
             </div>
             <div class="row">
                 <button type="submit">Save and reboot</button>
@@ -172,7 +160,7 @@
         </form>
     </div>
     <div class="github">
-        <p>Basic firmware v1.0, check out <a href="https://github.com/mcer12/Hugh-ESP8266" target="_blank"><strong>Hugh</strong> on GitHub</a></p>
+        <p>diyHue firmware v1.0, check out <a href="https://github.com/mcer12/Hugh-ESP8266" target="_blank"><strong>Hugh</strong> on GitHub</a></p>
     </div>
 </div>
 
