--- a/Firmware/Hugo_diyHueTapSwitch/webconfig.html
+++ b/Firmware/Hugo_diyHueTapSwitch/webconfig.html
@@ -146,6 +146,154 @@
         <p>Battery level: @</p>
         <div><div style="background: @; width: @"></div></div>
     </div>
+    <div class="container"><!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Hugh Configuration</title>
+    <style>
+        html,body{
+            margin: 0;
+            padding: 0;
+            font-size: 16px;
+            background: #444444;
+        }
+        body,*{
+            box-sizing: border-box;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+        }
+        a{
+            color: inherit;
+            text-decoration: underline;
+        }
+        .wrapper{
+            margin: 50px 0;
+        }
+        .container{
+            margin: auto;
+            padding: 40px;
+            max-width: 500px;
+            color: #fff;
+            background: #000;
+            box-shadow: 0 0 100px rgba(0,0,0,.5);
+            border-radius: 50px;
+        }
+        .row{
+            margin-bottom: 15px;
+        }
+        h1{
+            margin: 0 0 10px 0;
+            font-family: Arial, sans-serif;
+            font-weight: 300;
+            font-size: 2rem;
+        }
+        h1 + p{
+            margin-bottom: 30px;
+        }
+        h2{
+            margin: 30px 0 0 0;
+            font-family: Arial, sans-serif;
+            font-weight: 300;
+            font-size: 1.5rem;
+        }
+        p{
+            font-size: .85rem;
+            margin: 0 0 20px 0;
+            color: rgba(255,255,255,.7);
+        }
+        label{
+            display: block;
+            width: 100%;
+            margin-bottom: 5px;
+        }
+        input[type="text"],
+        input[type="password"]{
+            display: inline-block;
+            width: 100%;
+            height: 40px;
+            line-height: 38px;
+            padding: 0 20px;
+            color: #fff;
+            border: 2px solid #666;
+            background: none;
+            border-radius: 5px;
+            transition: .15s;
+            box-shadow: 0;
+            outline: none;
+        }
+        input[type="text"]:focus,
+        input[type="password"]:focus{
+            border-color: #ccc;
+        }
+        button{
+            display: block;
+            width: 100%;
+            padding: 10px 20px;
+            font-size: 1rem;
+            font-weight: 700;
+            text-transform: uppercase;
+            background: #ff9c29;
+            border: 0;
+            border-radius: 3px;
+            cursor: pointer;
+            transition: .15s;
+        }
+        button:hover{
+            background: #ffba66;
+        }
+        .github{
+            font-size: 1rem;
+            margin-top: 15px;
+            text-align: center;
+        }
+        .github a{
+            color: #ff9c29;
+            transition: .15s;
+        }
+        .github a:hover{
+            color: #ffba66;
+        }
+        .bat p{
+            margin: 0 0 5px 0;
+            text-align: center;
+            text-transform: uppercase;
+            font-size: .8rem;
+        }
+        .bat > div{
+            position: relative;
+            margin: 0 auto 20px;
+            width: 300px;
+            height: 10px;
+            background: #272727;
+            border-radius: 5px;
+        }
+        .bat > div > div{
+            position: absolute;
+            left: 0;
+            top: 0;
+            bottom: 0;
+            border-radius: 15px;
+            min-width: 30px;
+        }
+    </style>
+    <style media="all and (max-width: 520px)">
+        .wrapper{
+            margin: 20px 0 20px 0;
+        }
+        .container{
+            padding: 25px 15px;
+            border-radius: 0;
+        }
+    </style>
+</head>
+<body>
+
+<div class="wrapper">
+    <div class="bat">
+        <p>Battery level: @</p>
+        <div><div style="background: @; width: @"></div></div>
+    </div>
     <div class="container">
         <form method="post" action="/">
             <h1>Hugh Configuration</h1>
@@ -157,7 +305,53 @@
                 <input type="text" id="ssid" name="ssid" value="@">
             </div>
             <div class="row">
-                <label for="pass">WIFI Password</label>
+                <label for="pass">WiFi Password</label>
+                <input type="password" id="pass" name="pass" value="@">
+            </div>
+            <h2>Static IP settings (optional)</h2>
+            <p>Optional settings for static IP, in some cases this might speed up response time. All 3 need to be set and IP should be reserved in router's DHCP settings.</p>
+            <div class="row">
+                <label for="ip">IP Address (optional):</label>
+                <input type="text" id="ip" name="ip" value="@">
+            </div>
+            <div class="row">
+                <label for="gw">Gateway IP (optional):</label>
+                <input type="text" id="gw" name="gw" value="@">
+            </div>
+            <div class="row">
+                <label for="sn">Subnet mask (optional):</label>
+                <input type="text" id="sn" name="sn" value="@">
+            </div>
+            <h2>diyHue settings</h2>
+            <p>For the remote to work, specify your diyHue bridge IP address.<br>For example: "192.168.0.100"</p>
+            <div class="row">
+                <label for="bridge">Bridge IP</label>
+                <input type="text" id="bridge" name="bridge" value="@">
+            </div>
+            <div class="row">
+                <button type="submit">Save and reboot</button>
+            </div>
+        </form>
+    </div>
+    <div class="github">
+        <p>diyHue firmware v1.0, check out <a href="https://github.com/mcer12/Hugh-ESP8266" target="_blank"><strong>Hugh</strong> on GitHub</a></p>
+    </div>
+</div>
+
+</body>
+</html>
+
+        <form method="post" action="/">
+            <h1>Hugh Configuration</h1>
+            <p>Press any of the Hugh's buttons to shut down config AP and resume normal function.</p>
+            <h2>Network settings</h2>
+            <p>Select your network settings here.</p>
+            <div class="row">
+                <label for="ssid">WiFi SSID</label>
+                <input type="text" id="ssid" name="ssid" value="@">
+            </div>
+            <div class="row">
+                <label for="pass">WiFi Password</label>
                 <input type="password" id="pass" name="pass" value="@">
             </div>
             <h2>Static IP settings (optional)</h2>
